kubernetes/main/apps/kanboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kanboard
  namespace: default
spec:
  selector:
    app: kanboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
