kubernetes/main/apps/kanboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    cert-manager.io/common-name: kanboard.home
spec:
  tls:
    - hosts:
      - kanboard.home
      secretName: kanboard-ing-cert
  ingressClassName: nginx
  rules:
  - host: kanboard.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanboard
            port:
              number: 80
